<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/history"
        style="@style/history"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="vertical" />

    <EditText
        android:id="@+id/input"
        style="@style/input"
        android:autofillHints="none"
        android:hint="@string/hint_input"
        app:layout_constraintBottom_toTopOf="@id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/result"
        style="@style/result"
        android:text="@string/button_0"
        app:layout_constraintBottom_toTopOf="@id/buttonsGrid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <GridLayout
        android:id="@+id/buttonsGrid"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck">

        <Button
            android:id="@+id/btnAC"
            style="@style/operationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_AC" />

        <Button
            android:id="@+id/btnBackspace"
            style="@style/operationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_backspace" />

        <Button
            android:id="@+id/btnPercent"
            style="@style/operationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_percent" />

        <Button
            android:id="@+id/btnDivide"
            style="@style/operationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_divide" />

        <Button
            android:id="@+id/btn7"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_7" />

        <Button
            android:id="@+id/btn8"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_8" />

        <Button
            android:id="@+id/btn9"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_9" />

        <Button
            android:id="@+id/btnMultiply"
            style="@style/operationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_multiply" />

        <Button
            android:id="@+id/btn4"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_4" />

        <Button
            android:id="@+id/btn5"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_5" />

        <Button
            android:id="@+id/btn6"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_6" />

        <Button
            android:id="@+id/btnSubtract"
            style="@style/operationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_subtract" />

        <Button
            android:id="@+id/btn1"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_1" />

        <Button
            android:id="@+id/btn2"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_2" />

        <Button
            android:id="@+id/btn3"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_3" />

        <Button
            android:id="@+id/btnAdd"
            style="@style/operationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_add" />

        <Button
            android:id="@+id/btnClear"
            style="@style/operationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_clear" />

        <Button
            android:id="@+id/btn0"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_0"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btnComma"
            style="@style/numberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_comma" />

        <Button
            android:id="@+id/btnEquals"
            style="@style/equalsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/button_equals"
            tools:ignore="TextContrastCheck" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>